--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.4.49",
@@ -26,6 +27,7 @@
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.15",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
