--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "description": "My webpack project",
   "devDependencies": {
+    "@iconify/json": "^2.2.276",
+    "@iconify/tailwind": "^1.1.3",
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
