--- a/package.json
+++ b/package.json
@@ -17,21 +17,23 @@
   "devDependencies": {
     "@iconify/json": "^2.2.276",
     "@iconify/tailwind": "^1.1.3",
-    "@webpack-cli/generators": "^3.0.7",
-    "autoprefixer": "^10.4.20",
+    "@iconify/tailwind4": "^1.0.6",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@webpack-cli/generators": "^2.5.0",
+    "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.0",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.1.10",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.1.0",
     "workbox-webpack-plugin": "^7.3.0"
   }
